# biblebee-api

./: .gitignore  Dockerfile  Procfile  README.md  daily_verse.json  docker-compose.yaml  pyproject.toml  requirements.txt
biblebee_api/: __init__.py  app.py  database.py  scheduler.py  worker.py
biblebee_api/api/: adm_api.py  bibles_api.py  bibles_stats.py  bibles_stats_api.py  daily_verses_api.py
biblebee_api/model/: bible_model.py
biblebee_api/repo/: bibles_repo.py  devices_repo.py
biblebee_api/schema/: bible_schema.py
biblebee_api/service/: cloud_messaging.py  verse_parser.py
resource/: daily_verse.json
tests/: test_verses_parser.py
